Corrected Overflow issue of AppSkeleton

--- a/apps/pm-user/src/components/organisms/appSkeleton/appSkeleton.module.scss
+++ b/apps/pm-user/src/components/organisms/appSkeleton/appSkeleton.module.scss
@@ -17,6 +17,7 @@
   height: 100%;
   width: 20%;
   background-color: white;
+  margin-right: 12px;
 }
 
 .children {
